--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Modern admin is super flexible, powerful, clean &amp; modern responsive bootstrap 4 admin template with unlimited possibilities with bitcoin dashboard.">
     <meta name="keywords" content="admin template, modern admin template, dashboard template, flat admin template, responsive admin template, web app, crypto dashboard, bitcoin dashboard">
     <meta name="author" content="PIXINVENT">
-    <title>Dark Layout - Modern Admin - Clean Bootstrap 4 Dashboard HTML Template + Bitcoin Dashboard</title>
+    <title>{% block title %}{% endblock %} - Instant Notification System</title>
     <link rel="apple-touch-icon" href="static/app-assets/images/ico/apple-icon-120.png">
     <link rel="shortcut icon" type="image/x-icon" href="static/app-assets/images/ico/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Quicksand:300,400,500,700" rel="stylesheet">
@@ -29,178 +29,22 @@
   <body class="vertical-layout vertical-menu-modern 2-columns   menu-expanded fixed-navbar" data-open="click" data-menu="vertical-menu-modern" data-col="2-columns">
 
     <!-- fixed-top-->
-    <nav class="header-navbar navbar-expand-md navbar navbar-with-menu navbar-without-dd-arrow fixed-top navbar-dark navbar-shadow">
-      <div class="navbar-wrapper">
-        <div class="navbar-header">
-          <ul class="nav navbar-nav flex-row">
-            <li class="nav-item mobile-menu d-md-none mr-auto"><a class="nav-link nav-menu-main menu-toggle hidden-xs" href="#"><i class="ft-menu font-large-1"></i></a></li>
-            <li class="nav-item mr-auto"><a class="navbar-brand" href="index.html"><img class="brand-logo" alt="modern admin logo" src="static/app-assets/images/logo/logo.png">
-                <h3 class="brand-text">Modern Admin</h3></a></li>
-            <li class="nav-item d-none d-md-block float-right"><a class="nav-link modern-nav-toggle pr-0" data-toggle="collapse"><i class="toggle-icon ft-toggle-right font-medium-3 white" data-ticon="ft-toggle-right"></i></a></li>
-            <li class="nav-item d-md-none"><a class="nav-link open-navbar-container" data-toggle="collapse" data-target="#navbar-mobile"><i class="la la-ellipsis-v"></i></a></li>
-          </ul>
-        </div>
-        <div class="navbar-container content">
-          <div class="collapse navbar-collapse" id="navbar-mobile">
-            <ul class="nav navbar-nav float-right">
-              <li class="dropdown dropdown-user nav-item"><a class="dropdown-toggle nav-link dropdown-user-link" href="#" data-toggle="dropdown"><span class="avatar avatar-online"><img src="static/app-assets/images/portrait/small/avatar-s-19.png" alt="avatar"><i></i></span><span class="user-name">John Doe</span></a>
-                <div class="dropdown-menu dropdown-menu-right"><a class="dropdown-item" href="#"><i class="ft-user"></i> Edit Profile</a><a class="dropdown-item" href="#"><i class="ft-mail"></i> My Inbox</a><a class="dropdown-item" href="#"><i class="ft-check-square"></i> Task</a><a class="dropdown-item" href="#"><i class="ft-message-square"></i> Chats</a>
-                  <div class="dropdown-divider"></div><a class="dropdown-item" href="#"><i class="ft-power"></i> Logout</a>
-                </div>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </nav>
+    {% include 'header.html' %}
 
     <!-- ////////////////////////////////////////////////////////////////////////////-->
 
 
-    <!-- main menu-->
-    <div class="main-menu menu-fixed menu-dark menu-accordion menu-shadow" data-scroll-to-active="true">
-      <div class="main-menu-content">
-        <ul class="navigation navigation-main" id="main-menu-navigation" data-menu="menu-navigation">
-          <li class=" nav-item"><a href="static/html/ltr/vertical-modern-menu-template/index.html"><i class="la la-home"></i><span class="menu-title" data-i18n="">Dashboard</span><span class="badge badge badge-info badge-pill float-right mr-2">5</span></a>
-          </li>
-          <li class=" nav-item"><a href="#"><i class="la la-rocket"></i><span class="menu-title" data-i18n="">Starter kit</span></a>
-            <ul class="menu-content">
-              <li><a class="menu-item" href="layout-1-column.html" data-i18n="nav.starter_kit.1_column">1 column</a>
-              </li>
-              <li><a class="menu-item" href="layout-2-columns.html" data-i18n="nav.starter_kit.2_columns">2 columns</a>
-              </li>
-              <li><a class="menu-item" href="#" data-i18n="nav.starter_kit.3_columns_detached.main">Content Det. Sidebar</a>
-                <ul class="menu-content">
-                  <li><a class="menu-item" href="layout-content-detached-left-sidebar.html" data-i18n="nav.starter_kit.3_columns_detached.3_columns_detached_left_sidebar">Detached left sidebar</a>
-                  </li>
-                  <li><a class="menu-item" href="layout-content-detached-left-sticky-sidebar.html" data-i18n="nav.starter_kit.3_columns_detached.3_columns_detached_sticky_left_sidebar">Detached sticky left sidebar</a>
-                  </li>
-                  <li><a class="menu-item" href="layout-content-detached-right-sidebar.html" data-i18n="nav.starter_kit.3_columns_detached.3_columns_detached_right_sidebar">Detached right sidebar</a>
-                  </li>
-                  <li><a class="menu-item" href="layout-content-detached-right-sticky-sidebar.html" data-i18n="nav.starter_kit.3_columns_detached.3_columns_detached_sticky_right_sidebar">Detached sticky right sidebar</a>
-                  </li>
-                </ul>
-              </li>
-              <li class="navigation-divider"></li>
-              <li><a class="menu-item" href="layout-fixed-navbar.html" data-i18n="nav.starter_kit.fixed_navbar">Fixed navbar</a>
-              </li>
-              <li><a class="menu-item" href="layout-fixed-navigation.html" data-i18n="nav.starter_kit.fixed_navigation">Fixed navigation</a>
-              </li>
-              <li><a class="menu-item" href="layout-fixed-navbar-navigation.html" data-i18n="nav.starter_kit.fixed_navbar_navigation">Fixed navbar &amp; navigation</a>
-              </li>
-              <li><a class="menu-item" href="layout-fixed-navbar-footer.html" data-i18n="nav.starter_kit.fixed_navbar_footer">Fixed navbar &amp; footer</a>
-              </li>
-              <li class="navigation-divider"></li>
-              <li><a class="menu-item" href="layout-fixed.html" data-i18n="nav.starter_kit.fixed_layout">Fixed layout</a>
-              </li>
-              <li><a class="menu-item" href="layout-boxed.html" data-i18n="nav.starter_kit.boxed_layout">Boxed layout</a>
-              </li>
-              <li><a class="menu-item" href="layout-static.html" data-i18n="nav.starter_kit.static_layout">Static layout</a>
-              </li>
-              <li class="navigation-divider"></li>
-              <li><a class="menu-item" href="layout-light.html" data-i18n="nav.starter_kit.light_layout">Light layout</a>
-              </li>
-              <li class="active"><a class="menu-item" href="layout-dark.html" data-i18n="nav.starter_kit.dark_layout">Dark layout</a>
-              </li>
-              <li><a class="menu-item" href="layout-semi-dark.html" data-i18n="nav.starter_kit.semi_dark_layout">Semi dark layout</a>
-              </li>
-            </ul>
-          </li>
-          <li class=" nav-item"><a href="changelog.html"><i class="la la-file"></i><span class="menu-title" data-i18n="">Changelog</span><span class="badge badge badge-pill badge-danger float-right">1.0</span></a>
-          </li>
-          <li class=" navigation-header"><span>Support</span><i class="la la-ellipsis-h ft-minus" data-toggle="tooltip" data-placement="right" data-original-title="Support"></i>
-          </li>
-          <li class=" nav-item"><a href="https://pixinvent.ticksy.com/"><i class="la la-support"></i><span class="menu-title" data-i18n="">Raise Support</span></a>
-          </li>
-          <li class=" nav-item"><a href="https://pixinvent.com/modern-admin-clean-bootstrap-4-dashboard-html-template/documentation"><i class="la la-folder"></i><span class="menu-title" data-i18n="">Documentation</span></a>
-          </li>
-        </ul>
-      </div>
-    </div>
-
+    <!--SIDEBAR-->
+    {% include 'sidebar.html' %}
+    
+  
+    <!-- CONTENT -->
     <div class="app-content content">
-      <div class="content-wrapper">
-        <div class="content-header row">
-          <div class="content-header-left col-md-6 col-12 mb-2 breadcrumb-new">
-            <h3 class="content-header-title mb-0 d-inline-block">Dark Layout</h3>
-            <div class="row breadcrumbs-top d-inline-block">
-              <div class="breadcrumb-wrapper col-12">
-                <ol class="breadcrumb">
-                  <li class="breadcrumb-item"><a href="index.html">Home</a>
-                  </li>
-                  <li class="breadcrumb-item"><a href="#">Starters Kit</a>
-                  </li>
-                  <li class="breadcrumb-item active">Dark Layout
-                  </li>
-                </ol>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="content-body"><section class="row">
-    <div class="col-sm-12">
-        
-
-    </div>
-</section>
-
-<section class="row">
-    <div class="col-md-6 col-sm-12">
-        <div id="with-header" class="card">
-            <div class="card-header">
-                <h4 class="card-title">With Header</h4>
-                <a class="heading-elements-toggle"><i class="la la-ellipsis-v font-medium-3"></i></a>
-                <div class="heading-elements">
-                    <ul class="list-inline mb-0">
-                        <li><a data-action="collapse"><i class="ft-minus"></i></a></li>
-                        <li><a data-action="reload"><i class="ft-rotate-cw"></i></a></li>
-                        <li><a data-action="close"><i class="ft-x"></i></a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="card-content collapse show">
-                <div class="card-body border-top-blue-grey border-top-lighten-5 ">
-                    <h4 class="card-title">Content title</h4>
-                    <p class="card-text">Add a heading to card with <code>.card-header </code> class &amp; content title uses <code>.card-title</code> class. For border add <code>.border-top-COLOR</code> class</p>
-                    <p class="card-text">You may also include any &lt;h1&gt;-&lt;h6&gt; with a <code>.card-header </code> &amp; <code>.card-title</code> class to add heading.</p>
-                    <p class="card-text">Jelly beans sugar plum cheesecake cookie oat cake soufflé. Tart lollipop carrot cake sugar plum. Marshmallow wafer tiramisu jelly beans.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="col-md-6 col-sm-12">
-        <div id="with-header-border-0" class="card">
-            <div class="card-header">
-                <h4 class="card-title">With Header &amp; No Border</h4>
-                <a class="heading-elements-toggle"><i class="la la-ellipsis-v font-medium-3"></i></a>
-                <div class="heading-elements">
-                    <ul class="list-inline mb-0">
-                        <li><a data-action="collapse"><i class="ft-minus"></i></a></li>
-                        <li><a data-action="reload"><i class="ft-rotate-cw"></i></a></li>
-                        <li><a data-action="close"><i class="ft-x"></i></a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="card-content collapse show">
-                <div class="card-body">
-                    <h4 class="card-title">Content title</h4>
-                    <p class="card-text">Add a heading to card with <code>.card-header </code> class &amp; content title uses <code>.card-title</code> class.</p>
-                    <p class="card-text">You may also include any &lt;h1&gt;-&lt;h6&gt; with a <code>.card-header </code> &amp; <code>.card-title</code> class to add heading.</p>
-                    <p class="card-text">Gingerbread brownie sweet roll cheesecake chocolate cake jelly beans marzipan gummies dessert. Jelly beans sugar plum cheesecake cookie oat cake soufflé.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-        </div>
-      </div>
+      {%block content%}{%endblock%}
     </div>
     <!-- ////////////////////////////////////////////////////////////////////////////-->
 
-
-    <footer class="footer footer-static footer-dark navbar-border navbar-shadow">
-      <p class="clearfix blue-grey lighten-2 text-sm-center mb-0 px-2"><span class="float-md-left d-block d-md-inline-block">Copyright  &copy; 2018 <a class="text-bold-800 grey darken-2" href="https://themeforest.net/user/pixinvent/portfolio?ref=pixinvent" target="_blank">PIXINVENT </a>, All rights reserved. </span><span class="float-md-right d-block d-md-inline-blockd-none d-lg-block">Hand-crafted & Made with <i class="ft-heart pink"></i></span></p>
-    </footer>
+    {% include 'footer.html' %}
 
     <!-- BEGIN VENDOR JS-->
     <script src="static/app-assets/js/core/libraries/jquery.min.js" type="text/javascript"></script>
