--- a/templates/base.html
+++ b/templates/base.html
@@ -60,6 +60,7 @@
     <!-- BEGIN MODERN JS-->
     <script src="static/app-assets/js/core/app-menu.js" type="text/javascript"></script>
     <script src="static/app-assets/js/core/app.js" type="text/javascript"></script>
+    <script src="static/app-assets/js/scripts/customizer.js" type="text/javascript"></script>
     <!-- END MODERN JS-->
     <!-- BEGIN PAGE LEVEL JS-->
     <!-- END PAGE LEVEL JS-->
