--- a/templates/header.html
+++ b/templates/header.html
@@ -11,7 +11,7 @@
       <div class="navbar-container content">
         <div class="collapse navbar-collapse" id="navbar-mobile">
           <ul class="nav navbar-nav mr-auto float-left">
-            <li class="nav-item d-none d-md-block"><a class="nav-link nav-link-expand" href="#"><i class="ficon ft-maximize"></i></a></li>
+            <li class="nav-item d-none d-md-block"><a class="nav-link nav-link-expand"><i class="ficon ft-maximize"></i></a></li>
           </ul>
           <ul class="nav navbar-nav float-right">
             <li class="dropdown dropdown-notification nav-item">
