templates linked to the routes

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -5,21 +5,21 @@
         </li>
         <li class=" nav-item"><a href="#"><i class="la la-users"></i><span class="menu-title" data-i18n="">Students</span></a>
           <ul class="menu-content">
-            <li><a href="#" class="menu-item"><i class="la la-table"></i>Student Data</a>
+            <li><a href="/students" class="menu-item"><i class="la la-table"></i>Student Data</a>
             </li>
-            <li><a href="#" class="menu-item"><i class="la la-plus"></i>Register A Student</a>
+            <li><a href="/register-student" class="menu-item"><i class="la la-plus"></i>Register A Student</a>
             </li>
           </ul>
         </li>
-        <li class=" nav-item"><a href="#"><i class="la la-envelope"></i><span class="menu-title">Mass Message</span></a>
+        <li class=" nav-item"><a href="/mass-message"><i class="la la-envelope"></i><span class="menu-title">Mass Message</span></a>
         </li>
-        <li class=" nav-item"><a href="#"><i class="la la-comments"></i><span class="menu-title">Chat</span></a>
+        <li class=" nav-item"><a href="/chat"><i class="la la-comments"></i><span class="menu-title">Chat</span></a>
         </li>
         <li class=" navigation-header"><span>Extra</span><i class="la la-ellipsis-h ft-minus" data-toggle="tooltip" data-placement="right" data-original-title="Extra"></i>
         </li>
-        <li class=" nav-item"><a href="#"><i class="la la-info-circle"></i><span class="menu-title" data-i18n="">About</span></a>
+        <li class=" nav-item"><a href="/about"><i class="la la-info-circle"></i><span class="menu-title" data-i18n="">About</span></a>
         </li>
-        <li class=" nav-item"><a href="#"><i class="la la-github"></i><span class="menu-title" data-i18n="">Github</span></a>
+        <li class=" nav-item"><a href="https://github.com/GiorgiKharshiladze/instant-notification-system" target="_blank"><i class="la la-github"></i><span class="menu-title" data-i18n="">Github</span></a>
         </li>
       </ul>
     </div>
