do not open subitems on default

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -3,7 +3,7 @@
       <ul class="navigation navigation-main" id="main-menu-navigation" data-menu="menu-navigation">
         <li class="{%if request.path=='/'%}active{% endif %} nav-item"><a href="/"><i class="la la-home"></i><span class="menu-title">Dashboard</span><span class="badge badge badge-info badge-pill float-right mr-2">4</span></a>
         </li>
-        <li class="open nav-item"><a href="#"><i class="la la-users"></i><span class="menu-title">Students</span></a>
+        <li class=" nav-item"><a href="#"><i class="la la-users"></i><span class="menu-title">Students</span></a>
           <ul class="menu-content">
             <li class="{%if request.path=='/students'%}active{% endif %}"><a href="/students" class="menu-item"><i class="la la-table"></i>Student Data</a>
             </li>
