--- a/templates/mass_message.html
+++ b/templates/mass_message.html
@@ -16,18 +16,18 @@
 			<div class="col-md-12 col-sm-12">
 			    <div id="with-header-border-0" class="card">
 			        <div class="card-header">
-			            <h4 class="card-title">Campus Activity</h4>
+			            <h4 class="card-title">Choose message type</h4>
 			            <a class="heading-elements-toggle"><i class="la la-ellipsis-v font-medium-3"></i></a>
-			            <div class="heading-elements">
-			                <ul class="list-inline mb-0">
-			                    <li><a data-action="collapse"><i class="ft-minus"></i></a></li>
-			                </ul>
-			            </div>
 			        </div>
 			        <div class="card-content collapse show">
 			            <div class="card-body">
-			                <h4 class="card-title">Content title</h4>
-			                <p class="card-text">Content body</p>
+			                <fieldset class="form-group position-relative">
+				              <select class="form-control input-lg" id="LargeSelect">
+				                {% for type in message_types %}
+				                <option value="{{type[0]}}">{{type[1]}}</option>
+				                {% endfor %}
+				              </select>
+				            </fieldset>
 			            </div>
 			        </div>
 			    </div>
