--- a/templates/mass_message.html
+++ b/templates/mass_message.html
@@ -29,7 +29,7 @@
 			                      <div class="text-bold-600 font-medium-2">
 			                        Select Audience
 			                      </div>
-			                      <select class="select2 form-control" multiple="multiple">
+			                      <select class="select2-bg form-control" data-bgcolor="secondary" multiple="multiple" name="selected_audience" required>
 			                      	{% for aud, hall_name, floors in audience %}
 			                        	<option value="{{ aud }}">{{ hall_name }}</option>
 			                        	{% for floor in floors %}
@@ -39,7 +39,7 @@
 			                      </select>
 			                    </div>
 				                <fieldset class="form-group">
-			                      <textarea class="form-control" id="basicTextarea" placeholder="Mass Message Text..." rows="4">{{ message_template }}</textarea>
+			                      <textarea class="form-control" id="basicTextarea" placeholder="Mass Message Text..." rows="4" name="message" required>{{ message_template }}</textarea>
 			                    </fieldset>
 					            <div class="text-right">
 					            	<a href="javascript:history.go(-1)" class="btn btn-secondary">Go Back </a>
