chat visuals work pretty well

--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" type="text/css" href="static/assets/css/style.css">
     <!-- END Custom CSS-->
   </head>
-  <body class="vertical-layout vertical-menu-modern 2-columns   menu-expanded fixed-navbar" data-open="click" data-menu="vertical-menu-modern" data-col="2-columns">
+  <body class="vertical-layout vertical-menu-modern {%block body_template%}{%endblock%}" data-open="click" data-menu="vertical-menu-modern" data-col="2-columns">
 
     <!-- fixed-top-->
     {% include 'header.html' %}
