--- a/templates/students.html
+++ b/templates/students.html
@@ -3,7 +3,7 @@
 {% block import_styles %}
 <link rel="stylesheet" type="text/css" href="static/app-assets/vendors/css/tables/datatable/datatables.min.css">
 {% endblock %}
-
+{% block body_template %}2-columns menu-expanded fixed-navbar{% endblock %}
 {% block content %}
 <div class="content-wrapper">
     <div class="content-header row">
