--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block title %}Dashboard{% endblock %}
+{% block body_template %}2-columns menu-expanded fixed-navbar{% endblock %}
 {% block content %}
 
 <div class="content-wrapper">
