--- a/templates/mass_message.html
+++ b/templates/mass_message.html
@@ -3,6 +3,7 @@
 {% block import_styles%}
 <link rel="stylesheet" type="text/css" href="static/app-assets/vendors/css/forms/selects/select2.min.css">
 {% endblock %}
+{% block body_template %}2-columns menu-expanded fixed-navbar{% endblock %}
 {% block content %}
 
 <div class="content-wrapper">
