--- a/templates/base.html
+++ b/templates/base.html
@@ -45,7 +45,7 @@
     </div>
     <!-- ////////////////////////////////////////////////////////////////////////////-->
 
-    {% include 'footer.html' %}
+    <!-- {% include 'footer.html' %} -->
 
     <!-- BEGIN VENDOR JS-->
     <script src="{{ url_for('static', filename='app-assets/js/core/libraries/jquery.min.js') }}" type="text/javascript"></script>
