--- a/templates/chat.html
+++ b/templates/chat.html
@@ -23,7 +23,7 @@
         <div class="users-list-padding media-list">
           <a href="#" class="media border-0">
             <div class="media-left pr-1">
-              <span class="avatar avatar-md avatar-online">
+              <span class="avatar avatar-md">
                 <img class="media-object rounded-circle" src="{{ url_for('static', filename='app-assets/images/portrait/small/avatar-s-3.png') }}"
                 alt="Generic placeholder image">
                 <i></i>
@@ -33,14 +33,14 @@
               <h6 class="list-group-item-heading">Elizabeth Elliott
                 <span class="font-small-3 float-right info">4:14 AM</span>
               </h6>
-              <p class="list-group-item-text text-muted mb-0"><i class="ft-check primary font-small-2"></i> Okay
-                <span class="float-right primary"><i class="font-medium-1 icon-pin blue-grey lighten-3"></i></span>
+              <p class="list-group-item-text text-muted mb-0">Okay
+                <span class="float-right primary"></span>
               </p>
             </div>
           </a>
-          <a href="#" class="media border-0">
+          <a href="#" class="media bg-blue-grey bg-lighten-4 border-right-info border-right-2">
             <div class="media-left pr-1">
-              <span class="avatar avatar-md avatar-busy">
+              <span class="avatar avatar-md">
                 <img class="media-object rounded-circle" src="{{ url_for('static', filename='app-assets/images/portrait/small/avatar-s-7.png') }}"
                 alt="Generic placeholder image">
                 <i></i>
@@ -57,25 +57,7 @@
               </p>
             </div>
           </a>
-          <a href="#" class="media border-0">
-            <div class="media-left pr-1">
-              <span class="avatar avatar-md avatar-away">
-                <img class="media-object rounded-circle" src="{{ url_for('static', filename='app-assets/images/portrait/small/avatar-s-8.png') }}"
-                alt="Generic placeholder image">
-                <i></i>
-              </span>
-            </div>
-            <div class="media-body w-100">
-              <h6 class="list-group-item-heading">Sarah Woods
-                <span class="font-small-3 float-right info">2:14 AM</span>
-              </h6>
-              <p class="list-group-item-text text-muted mb-0"><i class="ft-check font-small-2"></i> Hello krish!
-                <span class="float-right primary"><i class="font-medium-1 icon-volume-off blue-grey lighten-3 mr-1"></i>
-                  <span class="badge badge-pill badge-danger">3</span>
-                </span>
-              </p>
-            </div>
-          </a>
+
           <a href="#" class="media bg-blue-grey bg-lighten-5 border-right-info border-right-2">
             <div class="media-left pr-1">
               <span class="avatar avatar-md avatar-online">
@@ -91,104 +73,6 @@
               <p class="list-group-item-text text-muted mb-0"><i class="ft-check primary font-small-2"></i> Can we connect?</p>
             </div>
           </a>
-          <a href="#" class="media border-0">
-            <div class="media-left pr-1">
-              <span class="avatar avatar-md avatar-away">
-                <img class="media-object rounded-circle" src="{{ url_for('static', filename='app-assets/images/portrait/small/avatar-s-5.png') }}"
-                alt="Generic placeholder image">
-                <i></i>
-              </span>
-            </div>
-            <div class="media-body w-100">
-              <h6 class="list-group-item-heading">Sarah Montgomery
-                <span class="font-small-3 float-right info">Yesterday</span>
-              </h6>
-              <p class="list-group-item-text text-muted mb-0"><i class="ft-check font-small-2"></i> Will connect you</p>
-            </div>
-          </a>
-          <a href="#" class="media border-0">
-            <div class="media-left pr-1">
-              <span class="avatar avatar-md avatar-online">
-                <img class="media-object rounded-circle" src="{{ url_for('static', filename='app-assets/images/portrait/small/avatar-s-9.png') }}"
-                alt="Generic placeholder image">
-                <i></i>
-              </span>
-            </div>
-            <div class="media-body w-100">
-              <h6 class="list-group-item-heading">Heather Howell
-                <span class="font-small-3 float-right info">Friday</span>
-              </h6>
-              <p class="list-group-item-text text-muted mb-0"><i class="ft-check font-small-2"></i> Thank you
-                <span class="float-right primary">
-                  <span class="badge badge-pill badge-danger">4</span>
-                </span>
-              </p>
-            </div>
-          </a>
-          <a href="#" class="media border-0">
-            <div class="media-left pr-1">
-              <span class="avatar avatar-md avatar-busy">
-                <img class="media-object rounded-circle" src="{{ url_for('static', filename='app-assets/images/portrait/small/avatar-s-7.png') }}"
-                alt="Generic placeholder image">
-                <i></i>
-              </span>
-            </div>
-            <div class="media-body w-100">
-              <h6 class="list-group-item-heading">Kelly Reyes
-                <span class="font-small-3 float-right info">Thrusday</span>
-              </h6>
-              <p class="list-group-item-text text-muted mb-0"><i class="ft-check font-small-2"></i> I love you </p>
-            </div>
-          </a>
-          <a href="#" class="media border-0">
-            <div class="media-left pr-1">
-              <span class="avatar avatar-md avatar-online">
-                <img class="media-object rounded-circle" src="{{ url_for('static', filename='app-assets/images/portrait/small/avatar-s-14.png') }}"
-                alt="Generic placeholder image">
-                <i></i>
-              </span>
-            </div>
-            <div class="media-body w-100">
-              <h6 class="list-group-item-heading">Vincent Nelson</h6>
-              <p class="list-group-item-text text-muted mb-0"><i class="ft-check primary font-small-2"></i> Who you are?</p>
-            </div>
-          </a>
-          <a href="#" class="media border-0">
-            <div class="media-left pr-1">
-              <span class="avatar avatar-md avatar-online">
-                <img class="media-object rounded-circle" src="{{ url_for('static', filename='app-assets/images/portrait/small/avatar-s-3.png') }}"
-                alt="Generic placeholder image">
-                <i></i>
-              </span>
-            </div>
-            <div class="media-body w-100">
-              <h6 class="list-group-item-heading">Elizabeth Elliott
-                <span class="font-small-3 float-right info">4:14 AM</span>
-              </h6>
-              <p class="list-group-item-text text-muted mb-0"><i class="ft-check font-small-2"></i> Okay
-                <span class="float-right primary"><i class="font-medium-1 icon-pin blue-grey lighten-3"></i></span>
-              </p>
-            </div>
-          </a>
-          <a href="#" class="media border-0">
-            <div class="media-left pr-1">
-              <span class="avatar avatar-md avatar-busy">
-                <img class="media-object rounded-circle" src="{{ url_for('static', filename='app-assets/images/portrait/small/avatar-s-7.png') }}"
-                alt="Generic placeholder image">
-                <i></i>
-              </span>
-            </div>
-            <div class="media-body w-100">
-              <h6 class="list-group-item-heading">Kristopher Candy
-                <span class="font-small-3 float-right info">9:04 PM</span>
-              </h6>
-              <p class="list-group-item-text text-muted mb-0"><i class="ft-check primary font-small-2"></i> Thank you
-                <span class="float-right primary">
-                  <span class="badge badge-pill badge-danger">12</span>
-                </span>
-              </p>
-            </div>
-          </a>
         </div>
       </div>
     </div>
@@ -200,31 +84,42 @@
     </div>
     <div class="content-body">
       <section class="chat-app-window">
-        <div class="badge badge-default mb-1">Chat History</div>
+        <div class="badge badge-default mb-1 bg-dark">Chat History</div>
           <div class="chats">
-            <div class="chat chat-left">
+            
               <!-- <div class="chat-avatar">
                 <a class="avatar" data-toggle="tooltip" href="#" data-placement="left" title="" data-original-title="">
                   <img src="{{ url_for('static', filename='app-assets/images/portrait/small/avatar-s-7.png') }}" alt="avatar"
                   />
                 </a>
               </div> -->
-              <div class="chat-body">
-                <div class="chat-content">
-                  <p>I will purchase it for sure.</p>
+              {% for message in messages %}
+                {% if message[2] %} <!-- This means if user is sending a message -->
+                <div class="chat chat-left">
+                  <div class="chat-body">
+                    {% if message[3] %} <!-- if that message is an image -->
+                      <div class="chat-content"  style="width:20%">
+                        <a href="../static/{{message[1]}}" target="_blank"><img src="../static/{{message[1]}}" width="100%"></a>
+                      </div>
+                    {% else %} <!--if it is a regular text-->
+                      <div class="chat-content">
+                        <p>{{message[1]}}</p>
+                      </div>
+                    {% endif %}
+                  </div>
                 </div>
-                <div class="chat-content">
-                  <p>Thanks.</p>
+                {% else %} <!--If we are the senders-->
+                <div class="chat">
+                  <div class="chat-body">
+                    <div class="chat-content">
+                      <p>{{ message[1] }}</p>
+                    </div>
+                  </div>
                 </div>
-              </div>
-            </div>
-            <div class="chat">
-              <div class="chat-body">
-                <div class="chat-content">
-                  <p>https://pixinvent.ticksy.com/</p>
-                </div>
-              </div>
-            </div>
+                {% endif %}
+              {% endfor %}
+              
+            
           </div>
       </section>
       <section class="chat-app-form">
