--- a/templates/chat.html
+++ b/templates/chat.html
@@ -21,8 +21,7 @@
       </div>
       <div id="users-list" class="list-group position-relative">
         <div class="users-list-padding media-list">
-          UNREAD BADGES + UNREAD COLORING
-          <a href="#" class="media bg-blue-grey bg-lighten-5 border-right-info border-right-2">
+          <!-- <a href="#" class="media bg-blue-grey bg-lighten-5 border-right-info border-right-2">
             <div class="media-left pr-1">
               <span class="avatar avatar-md">
                 <img class="media-object rounded-circle" src="{{ url_for('static', filename='app-assets/images/portrait/small/avatar-s-7.png') }}"
@@ -40,7 +39,7 @@
                 </span>
               </p>
             </div>
-          </a>
+          </a> -->
 
           {% for student in students %}
           <a href="/chat/{{ student[0] }}" class="media {%if request.path.split('/')[2]==student[0]%}bg-blue-grey bg-lighten-4 border-right-info border-right-2{%elif student[7]!=0%}bg-blue-grey bg-lighten-5 border-right-info border-right-2{%else%}border-0{% endif %}">
