--- a/templates/students.html
+++ b/templates/students.html
@@ -44,7 +44,7 @@
                         </tr>
                       </thead>
                       <tbody>
-                      	{% for student in students %}
+                      	{% for student in data['students'] %}
                         <tr>
                           <td>{{ student[0].capitalize() }}</td>
                           <td>{{ student[1].capitalize() }}</td>
