--- a/templates/header.html
+++ b/templates/header.html
@@ -91,12 +91,12 @@
             
             <li class="dropdown dropdown-notification nav-item">
               <a class="nav-link nav-link-label" href="#" data-toggle="dropdown"><i class="ficon ft-bell"></i>
-                <span class="badge badge-pill badge-default badge-danger badge-default badge-up badge-glow">5</span>
+                <span class="badge badge-pill badge-default badge-danger badge-default badge-up badge-glow">3</span>
               </a>
               <ul class="dropdown-menu dropdown-menu-media dropdown-menu-right">
                 <li class="dropdown-menu-header">
                   <h6 class="dropdown-header m-0">
-                    <span class="grey darken-2">Notifications</span>
+                    <span class="grey darken-2">Alerts</span>
                   </h6>
                   <span class="notification-tag badge badge-default badge-danger float-right m-0">5 New</span>
                 </li>
