send message works

--- a/templates/chat.html
+++ b/templates/chat.html
@@ -75,7 +75,7 @@
     </div>
     <div class="content-body">
       <section class="chat-app-window">
-        <div class="badge badge-default mb-1 bg-dark">Chat History</div>
+        <div class="badge badge-default mb-1 bg-dark">Chat History <input type="hidden" id="student_id" value="{{request.path.split('/')[2]}}"></div>
           <div class="chats">
             
               <!-- <div class="chat-avatar">
