is_report twilio separated

--- a/templates/base.html
+++ b/templates/base.html
@@ -60,6 +60,7 @@
     <!-- BEGIN PAGE IMPORTED JS-->
     {% block import_scripts %}{% endblock %}
     <!-- END PAGE IMPORTED JS-->
+    <script src="{{ url_for('static', filename='assets/js/custom.js') }}" type="text/javascript"></script>
     <!-- BEGIN MODERN JS-->
     <script src="{{ url_for('static', filename='app-assets/js/core/app-menu.js') }}" type="text/javascript"></script>
     <script src="{{ url_for('static', filename='app-assets/js/core/app.js') }}" type="text/javascript"></script>
