--- a/templates/header.html
+++ b/templates/header.html
@@ -15,7 +15,9 @@
           </ul>
           <ul class="nav navbar-nav float-right">
             <li class="dropdown dropdown-notification nav-item">
-              <a class="nav-link nav-link-label" href="#" data-toggle="dropdown"><i class="ficon ft-mail"></i></a>
+              <a class="nav-link nav-link-label" href="#" data-toggle="dropdown"><i class="ficon ft-mail"></i>
+                <span class="badge badge-pill badge-default badge-warning badge-default badge-up badge-glow">3</span>
+              </a>
               <ul class="dropdown-menu dropdown-menu-media dropdown-menu-right">
                 <li class="dropdown-menu-header">
                   <h6 class="dropdown-header m-0">
@@ -39,51 +41,6 @@
                         </div>
                       </div>
                     </a>
-                    <a href="javascript:void(0)">
-                      <div class="media">
-                        <div class="media-left">
-                          <span class="avatar avatar-sm avatar-busy rounded-circle">
-                            <img src="{{ url_for('static', filename='app-assets/images/portrait/small/avatar-s-2.png') }}" alt="avatar"><i></i></span>
-                        </div>
-                        <div class="media-body">
-                          <h6 class="media-heading">Bret Lezama</h6>
-                          <p class="notification-text font-small-3 text-muted">I have seen your work, there is</p>
-                          <small>
-                            <time class="media-meta text-muted" datetime="2015-06-11T18:29:20+08:00">Tuesday</time>
-                          </small>
-                        </div>
-                      </div>
-                    </a>
-                    <a href="javascript:void(0)">
-                      <div class="media">
-                        <div class="media-left">
-                          <span class="avatar avatar-sm avatar-online rounded-circle">
-                            <img src="{{ url_for('static', filename='app-assets/images/portrait/small/avatar-s-3.png') }}" alt="avatar"><i></i></span>
-                        </div>
-                        <div class="media-body">
-                          <h6 class="media-heading">Carie Berra</h6>
-                          <p class="notification-text font-small-3 text-muted">Can we have call in this week ?</p>
-                          <small>
-                            <time class="media-meta text-muted" datetime="2015-06-11T18:29:20+08:00">Friday</time>
-                          </small>
-                        </div>
-                      </div>
-                    </a>
-                    <a href="javascript:void(0)">
-                      <div class="media">
-                        <div class="media-left">
-                          <span class="avatar avatar-sm avatar-away rounded-circle">
-                            <img src="{{ url_for('static', filename='app-assets/images/portrait/small/avatar-s-6.png') }}" alt="avatar"><i></i></span>
-                        </div>
-                        <div class="media-body">
-                          <h6 class="media-heading">Eric Alsobrook</h6>
-                          <p class="notification-text font-small-3 text-muted">We have project party this saturday.</p>
-                          <small>
-                            <time class="media-meta text-muted" datetime="2015-06-11T18:29:20+08:00">last month</time>
-                          </small>
-                        </div>
-                      </div>
-                    </a>
                   <div class="ps-scrollbar-x-rail" style="left: 0px; bottom: 3px;"><div class="ps-scrollbar-x" tabindex="0" style="left: 0px; width: 0px;"></div></div><div class="ps-scrollbar-y-rail" style="top: 0px; right: 3px;"><div class="ps-scrollbar-y" tabindex="0" style="top: 0px; height: 0px;"></div></div></li>
                 <li class="dropdown-menu-footer"><a class="dropdown-item text-muted text-center" href="javascript:void(0)">Read all messages</a></li>
               </ul>
@@ -96,7 +53,7 @@
               <ul class="dropdown-menu dropdown-menu-media dropdown-menu-right">
                 <li class="dropdown-menu-header">
                   <h6 class="dropdown-header m-0">
-                    <span class="grey darken-2">Alerts</span>
+                    <span class="grey darken-2">Reports</span>
                   </h6>
                   <span class="notification-tag badge badge-default badge-danger float-right m-0">5 New</span>
                 </li>
