filter out todays reports

--- a/templates/header.html
+++ b/templates/header.html
@@ -23,7 +23,6 @@
                   <h6 class="dropdown-header m-0">
                     <span class="grey darken-2">Messages</span>
                   </h6>
-                  <span class="notification-tag badge badge-default badge-warning float-right m-0">{{data['unread_students']|length}} New</span>
                 </li>
                   <li class="scrollable-container media-list w-100 ps-container ps-theme-dark" data-ps-id="a8ba6310-7aaf-a8e0-4842-959ba0002a52">
                     {% if data['unread_students']|length==0 %}&nbsp;&nbsp;No unread messages<br><br>{%endif%}
@@ -35,7 +34,7 @@
                             <img src="{{ url_for('static', filename='app-assets/images/portrait/small/avatar-s-19.png') }}" alt="avatar"><i></i></span>
                         </div>
                         <div class="media-body">
-                          <h6 class="media-heading">{{student[1]}} {{student[2]}} <span class="badge badge-pill badge-default badge-warning badge-default">{{student[7]}}</span></h6>
+                          <h6 class="media-heading">{{student[1]}} {{student[2]}} </h6>
                           <p class="notification-text font-small-3 text-muted">{{student[3]}}</p>
                           <small>
                             <time class="media-meta text-muted">{{student[8]}}</time>
@@ -51,76 +50,32 @@
             
             <li class="dropdown dropdown-notification nav-item">
               <a class="nav-link nav-link-label" href="#" data-toggle="dropdown"><i class="ficon ft-bell"></i>
-                <span class="badge badge-pill badge-default badge-danger badge-default badge-up badge-glow">3</span>
+                <span class="badge badge-pill badge-default badge-danger badge-default badge-up badge-glow report-num">{{data['today_reports']|length}}</span>
               </a>
               <ul class="dropdown-menu dropdown-menu-media dropdown-menu-right">
                 <li class="dropdown-menu-header">
                   <h6 class="dropdown-header m-0">
-                    <span class="grey darken-2">Reports</span>
+                    <span class="grey darken-2">Reports Today</span>
                   </h6>
-                  <span class="notification-tag badge badge-default badge-danger float-right m-0">5 New</span>
                 </li>
                 <li class="scrollable-container media-list w-100 ps-container ps-theme-dark" data-ps-id="81d859a4-ed89-5062-f715-20ac7979ebe4">
-                  <a href="javascript:void(0)">
+                  {% if data['today_reports']|length==0 %}&nbsp;&nbsp;No reports<br><br>{%endif%}
+                  {% for report in data['today_reports'] %}
+                  <a href="chat/{{report[0]}}">
                     <div class="media">
-                      <div class="media-left align-self-center"><i class="ft-plus-square icon-bg-circle bg-cyan"></i></div>
+                      <div class="media-left align-self-center"><i class="ft-file icon-bg-circle bg-danger"></i></div>
                       <div class="media-body">
-                        <h6 class="media-heading">You have new order!</h6>
-                        <p class="notification-text font-small-3 text-muted">Lorem ipsum dolor sit amet, consectetuer elit.</p>
+                        <h6 class="media-heading red darken-1">{{report[1]}} {{report[2]}}</h6>
+                        <p class="notification-text font-small-3 text-muted">{{ report[3] }}</p>
                         <small>
-                          <time class="media-meta text-muted" datetime="2015-06-11T18:29:20+08:00">30 minutes ago</time>
+                          <time class="media-meta text-muted">{{report[4]}}</time>
                         </small>
                       </div>
                     </div>
                   </a>
-                  <a href="javascript:void(0)">
-                    <div class="media">
-                      <div class="media-left align-self-center"><i class="ft-download-cloud icon-bg-circle bg-red bg-darken-1"></i></div>
-                      <div class="media-body">
-                        <h6 class="media-heading red darken-1">99% Server load</h6>
-                        <p class="notification-text font-small-3 text-muted">Aliquam tincidunt mauris eu risus.</p>
-                        <small>
-                          <time class="media-meta text-muted" datetime="2015-06-11T18:29:20+08:00">Five hour ago</time>
-                        </small>
-                      </div>
-                    </div>
-                  </a>
-                  <a href="javascript:void(0)">
-                    <div class="media">
-                      <div class="media-left align-self-center"><i class="ft-alert-triangle icon-bg-circle bg-yellow bg-darken-3"></i></div>
-                      <div class="media-body">
-                        <h6 class="media-heading yellow darken-3">Warning notifixation</h6>
-                        <p class="notification-text font-small-3 text-muted">Vestibulum auctor dapibus neque.</p>
-                        <small>
-                          <time class="media-meta text-muted" datetime="2015-06-11T18:29:20+08:00">Today</time>
-                        </small>
-                      </div>
-                    </div>
-                  </a>
-                  <a href="javascript:void(0)">
-                    <div class="media">
-                      <div class="media-left align-self-center"><i class="ft-check-circle icon-bg-circle bg-cyan"></i></div>
-                      <div class="media-body">
-                        <h6 class="media-heading">Complete the task</h6>
-                        <small>
-                          <time class="media-meta text-muted" datetime="2015-06-11T18:29:20+08:00">Last week</time>
-                        </small>
-                      </div>
-                    </div>
-                  </a>
-                  <a href="javascript:void(0)">
-                    <div class="media">
-                      <div class="media-left align-self-center"><i class="ft-file icon-bg-circle bg-teal"></i></div>
-                      <div class="media-body">
-                        <h6 class="media-heading">Generate monthly report</h6>
-                        <small>
-                          <time class="media-meta text-muted" datetime="2015-06-11T18:29:20+08:00">Last month</time>
-                        </small>
-                      </div>
-                    </div>
-                  </a>
+                  {% endfor %}
                 <div class="ps-scrollbar-x-rail" style="left: 0px; bottom: 3px;"><div class="ps-scrollbar-x" tabindex="0" style="left: 0px; width: 0px;"></div></div><div class="ps-scrollbar-y-rail" style="top: 0px; right: 3px;"><div class="ps-scrollbar-y" tabindex="0" style="top: 0px; height: 0px;"></div></div></li>
-                <li class="dropdown-menu-footer"><a class="dropdown-item text-muted text-center" href="javascript:void(0)">Read all notifications</a></li>
+                <li class="dropdown-menu-footer"><a class="dropdown-item text-muted text-center" href="javascript:void(0)">Read all reports</a></li>
               </ul>
             </li>
             
