--- a/templates/reports.html
+++ b/templates/reports.html
@@ -6,7 +6,7 @@
 <div class="content-wrapper">
     <div class="content-header row">
       	<div class="content-header-left col-md-6 col-12 mb-2 breadcrumb-new">
-        	<h3 class="content-header-title mb-0 d-inline-block">Reports</h3>
+        	<h3 class="content-header-title mb-0 d-inline-block">Student Reports</h3>
         	<div class="row breadcrumbs-top d-inline-block">
           		<div class="breadcrumb-wrapper col-12"></div>
         	</div>
@@ -18,7 +18,7 @@
 			<div class="col-md-12 col-sm-12">
 			    <div id="with-header-border-0" class="card">
 			        <div class="card-header">
-			            <h4 class="card-title">History of reports</h4>
+			            <h4 class="card-title">History of student reports</h4>
 			            <a class="heading-elements-toggle"><i class="la la-ellipsis-v font-medium-3"></i></a>
 			            <div class="heading-elements">
 			                <ul class="list-inline mb-0">
